     	default throws an Error.
      * KerrBL:
	+ implement zamoVelocity();
   	+ remove observerTetrad(obskind...);
   	+ implement observerTetrad(pos, fourvel, ...) for any fourvel.
      * Screen: supports two new obskinds: VelocitySpecified and
        FullySpecified.
   * Screen: support changing camera orientation (with dangle1 and dangle2)

1.3.1 2019/01/22 BUG

   * Fix typos and minor bugs
   * New macro GYOTO_ERROR to prefix Gyoto::throwError message with
     __FILE__:__LINE__ in __PRETTY_FUNCTION__
   * In Spectrum::ThemalBremstrahlung::radiativeQ and alphanu, return
     inf instead of throwing an error when dividing a finite number by 0.

1.3.0 2019/01/10 ABI 7:0:0

   * Changed API: for consistency, replace CutOffIneV by CutOff (in
     Hz) in Spectrum::PowerLaw. New API supports unit, the user may
     replace
       <CutOffIneV> 1 2 </CutOffineV>
     with
       <CutOff unit='eV'> 1 2 </CutOff>
   * Changed API: for consistency, rename Factory::getScenery to
     Factory::scenery and Factory::getPhoton to Factory::photon.
   * Changed API: Factory::metric(), astrobj() etc. don't throw an error
     anymore when then XML file does not contain the relevant entity but
     return a NULL smartpointer instead
   * Support mpirun -np option for all MPI implementations (bypassing
     MPI_Comm_spawn()).
   * New Metric: Hayward
   * New Astrobjs: Blob, Jet, NeutronStar, NeutronStarAnalyticEmission,
     NeutronStarModelAtmosphere, XillverReflection
   * New Spectra: KappaDistributionSynchrotronSpectrum,
     PowerLawSynchrotronSpectrum, ThermalSynchrotronSpectrum
   * Python: combined the three Python modules in a package, renaming
     them as:
     + gyoto        -> gyoto.core
     + gyoto_std    -> gyoto.std
     + gyoto_lorene -> gyoto.lorene
     The old names are still accessible but are deprecated and may be
     removed in a future release.
   * Python: provide namespaces, e.g. gyoto.astrobj to hold Astrobjs